exports[`SPFNode Snapshots baseline snapshot 1`] = `
<div
  className="spf-tree__childWrapper">
  <div
    className="panel spf-tree__child spf-tree__child--mx">
    <div
      className="panel__body">
      <code
        className="spf-tree__code spf-tree__code--mx spf-tree__code--label">
        mx:_spf.erlock.homes
      </code>
      <code
        className="spf-tree__code">
        sirMXaLot
      </code>
    </div>
    <div
      className="spf-tree__accent" />
  </div>
</div>
`;

exports[`SPFNode Snapshots should display domain if passed 1`] = `
<div
  className="spf-tree__childWrapper">
  <div
    className="panel spf-tree__child spf-tree__child--mx">
    <div
      className="panel__body">
      <code
        className="spf-tree__code spf-tree__code--mx spf-tree__code--label">
        domain.com
      </code>
      <code
        className="spf-tree__code">
        sirMXaLot
      </code>
    </div>
    <div
      className="spf-tree__accent" />
  </div>
</div>
`;

exports[`SPFNode Snapshots should not show record if missing 1`] = `
<div
  className="spf-tree__childWrapper">
  <div
    className="panel spf-tree__child spf-tree__child--mx">
    <div
      className="panel__body">
      <code
        className="spf-tree__code spf-tree__code--mx">
        mx:_spf.erlock.homes
      </code>
    </div>
    <div
      className="spf-tree__accent" />
  </div>
</div>
`;
